Fixed visibility of inline entity form in chrome

--- a/wisski_editlayout/css/std/edit-form.css
+++ b/wisski_editlayout/css/std/edit-form.css
@@ -37,7 +37,6 @@ form .form-item input {
 /* simple multi value fields */ 
 
 form .field-multiple-table {
-/*  float: left;*/
   width: inherit;
 }
 
@@ -45,7 +44,6 @@ form .form-item .tabledrag-toggle-weight-wrapper {
   /* hide the toggle weights functionality */
   display: none;
 }
-
 
 table.field-multiple-table > div {
   float: right;
@@ -60,7 +58,6 @@ form .form-item table thead tr th {
   border: 0;
   background: none;
   color: inherit;
-//  background: white;
   padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 0;
@@ -88,7 +85,8 @@ form .form-item table tbody td input {
 
 form .form-item .field-add-more-submit.button,
 form .form-item .field-add-more-submit.button:hover,
-form .form-item .field-add-more-submit.button:focus {
+form .form-item .field-add-more-submit.button:focus,
+{
 
   background-image: url('../../images/icons/plus.png');
   background-repeat: no-repeat;
@@ -97,43 +95,31 @@ form .form-item .field-add-more-submit.button:focus {
 
   text-indent: 100px;
   font-size: 0 !important;
-/*
-  white-space: nowrap;
-  width: 36px;
-*/
   margin: 0 0 0 15px;
 
   
   width:25px;
   height:25px;
   line-height:25px;
-/*  border: 2px solid #f5f5f5; */
   border-radius: 50%;
   color:#f5f5f5;
   text-align:center;
   text-decoration:none;
-/*  background: #464646; */
   box-shadow: 0 0 3px gray;
   font-size:20px;
   font-weight:bold;
-/*  margin: 0;*/
 }
 
 form .form-item .clearfix {
     position: relative;
     top: 23px;
-    /* right: 10px; */
-    /* float: right; */
     display: table-cell;
- /* padding-left: 10px;*/
 }
 
 .form-item, .form-actions {
-/*    margin-top: 1em; */
     position: relative;
-/*    margin-bottom: 1em;*/
     width: auto;
-    display: table-row-group;
+ /*   display: table-row-group;  // this makes the subgroup labels disappear in chrome */
 }
 
 .form-composite > legend, .label {
